--- a/rwdActivity.css
+++ b/rwdActivity.css
@@ -36,6 +36,7 @@ ul li a {
 
 .container {
     display: flex;
+    flex-wrap: wrap
 }
 
 .title {
@@ -48,10 +49,6 @@ ul li a {
 /* Media Query */
 /* mobile */
 @media screen and (max-width: 414px) {
-    .container {
-        flex-wrap: wrap;
-    }
-
     .title {
         width: 100%;
         margin: 0 auto;
@@ -60,7 +57,7 @@ ul li a {
     ul {
         justify-content: center;
         justify-content: space-evenly;
-        margin-left: -25px;
+        padding-left: 0;
     }
 }
 
